--- a/AuthenticatorApp/src/main/res/values/strings.xml
+++ b/AuthenticatorApp/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
   <!-- The package of the application flavor, for use within preferences, etc. -->
-  <string name="app_package_name" translatable="false">com.google.android.apps.authenticator2</string>
+  <string name="app_package_name" translatable="false">net.leak4mk0.authenticator2</string>
 
   <!-- Name of the application -->
   <string name="app_name">Google Authenticator</string>
